# openu-kbdk

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md
board-models/imagenet-resnet18/: manifest.json
board/ncnn/: build.sh  v831-musl.toolchain.cmake
board/nvdla/: nna_runner.cpp
board/runner/: kbrun.cpp  manifest.h
captures/: nv21.py  ppm2raw.py
crates/kbdk-cli/: Cargo.toml
crates/kbdk-cli/src/: main.rs
crates/kbdk-core/: Cargo.toml
crates/kbdk-core/src/: adb.rs  build.rs  deploy.rs  discover.rs  frames.rs  fs.rs  hwinfo.rs  lib.rs  pack.rs  pipeline.rs  procs.rs  protocol.rs  serial.rs  transport.rs
crates/kbdk-core/tests/: frames.rs  hw_adb.rs  hw_fs.rs  hw_hwinfo.rs  hw_serial.rs
crates/kbdk-ui/: Cargo.toml
crates/kbdk-ui/src/: app.rs  convert_tab.rs  deploy_tab.rs  edit_tab.rs  examples_tab.rs  files_tab.rs  hardware_tab.rs  main.rs  tasks_tab.rs  theme.rs  train_tab.rs  workers.rs
docs/: handoff-2026-06-10-tcp-frames-and-npu.md
docs/research/: 2026-06-08-v831-maixhub-models.md  2026-06-11-bigger-npu-models.md  2026-06-21-led-gpio-investigation.md
docs/superpowers/plans/: 2026-06-08-npu-cnn-runtime-m1.md  2026-06-10-kbdk-detection-phase7.md  2026-06-10-kbdk-platform-phase1-5.md  2026-06-10-kbdk-ui-phase6.md  2026-06-21-board-ide-remaining-features.md  2026-06-21-build3-edit-tab-plan.md  2026-06-21-build4-examples-templates-plan.md  2026-06-21-build5-nav-reshell-plan.md  2026-06-21-hardware-panel.md  2026-06-21-kbdk-ui-files-tasks.md
docs/superpowers/specs/: 2026-06-08-npu-cnn-runtime-design.md  2026-06-10-devkit-platform-design.md  2026-06-21-edit-tab-design.md  2026-06-21-examples-templates-design.md  (+3 more)
examples/: make_toy_dataset.py  make_toy_detection.py
examples/board/: audio_tone.c  camera.c  hello.c  ledblink.c  screen.c
py/: pyproject.toml
py/kbdk-convert/: pyproject.toml
py/kbdk-convert/src/kbdk_convert/: cli.py  convert.py  nvdla.py  nvdla_compile.py
py/kbdk-convert/tests/: test_convert.py  test_nvdla.py  test_nvdla_compile.py
py/kbdk-train/: pyproject.toml
py/kbdk-train/src/kbdk_train/: cli.py  detect.py  train.py
py/kbdk-train/tests/: test_detect.py  test_train.py
scripts/: eval_classifier.py  nvdla_capacity.py  nvdla_parity.py  nvdla_verify.py  nvdla_verify_det.py  serial_transfer_run.py
src/: audio.c  camcc.c  camdiag.c  cammpp.c  campreview.c  camread.c  fbtest.c  hello.c  ledblink.c  nnacam.cpp  nnaprobe.c  nncls.c  nnload.c  uai.c  v4l2cap.c  v4l2probe.c
