[project]
name = "kbdk-convert"
version = "0.1.0"
description = "TorchScript -> pnnx -> ncnn -> int8 -> kbdk model pack"
requires-python = ">=3.12"
dependencies = ["torch>=2.4", "pnnx", "ncnn", "numpy", "pillow"]

[project.scripts]
kbdk-convert = "kbdk_convert.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kbdk_convert"]
